# 0bs

./: .cta.json  .env.example  .gitignore  README.md  bun.lockb  docker-compose.yml  drizzle.config.ts  generateKeys.mjs  index.html  litellm_config.yaml  next.config.js  package-lock.json  package.json  pyproject.toml  setup.sh  start.sh  test.ts  todo.md  vite.config.js
.cursor/rules/: base.mdc  convex_rules.mdc  nextjs.mdc
convex/: auth.ts  crons.ts  http.ts  schema.ts  test.txt
convex/_generated/: api.d.ts
convex/actions/: chat.ts  mcps.ts  models.ts  projectDocuments.ts
convex/chatInput/: actions.ts  mutations.ts  queries.ts
convex/chatStream/: mutations.ts  queries.ts
convex/chats/: actions.ts  mutations.ts  queries.ts
convex/documents/: actions.ts  mutations.ts  queries.ts
convex/http/: chat.ts
convex/langchain/: agent.ts  checkpointer.ts  getTools.ts  get_mcp_tools.ts  get_serch_tool.ts  index.ts  models.ts  weaviate.ts
convex/mcps/: actions.ts  crud.ts  mutations.ts  queries.ts  utils.ts
convex/projectDocuments/: actions.ts  mutations.ts  queries.ts
convex/projects/: mutations.ts  queries.ts
convex/routes/: chatInput.ts  chatStream.ts  chats.ts  documents.ts  mcps.ts  projects.ts  (+1 more)
docker/: Docker-services  Dockerfile-mcp  docker-compose.yml
scripts/: crawler.py  doc_processor.py  start.sh
src/: env.js  main.tsx  middleware.ts  routeTree.gen.ts  styles.css
zerobs/: README.md  pyproject.toml  start.sh
zerobs/src/zerobs/: __init__.py  config.py  services.py  tools.py
zerobs/src/zerobs/.ipynb_checkpoints/: __init__-checkpoint.py
(+95 files in other folders)
